--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "a koa project",
   "main": "index.js",
   "scripts": {
-    "start":"node server/index.js",
+    "dev": "nodemon -w server --exec \"babel-node server --presets env\"",
+    "build": "rimraf dist && babel server -s -D -d dist --presets env",
+    "production": "node dist",
+    "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +24,15 @@
   },
   "homepage": "https://github.com/vividwang/koa2#readme",
   "dependencies": {
-    "koa": "^2.5.0"
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-runtime": "^6.26.0",
+    "koa": "^2.5.0",
+    "nodemon": "^1.17.2",
+    "util": "^0.10.3"
+  },
+  "devDependencies": {
+    "rimraf": "^2.6.2"
   }
 }
