--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-runtime": "^6.26.0",
+    "cheerio": "^1.0.0-rc.2",
     "koa": "^2.5.0",
     "nodemon": "^1.17.2",
+    "puppeteer": "^1.2.0",
     "util": "^0.10.3"
   },
   "devDependencies": {
